Revision history for {{$dist->name}}},

{{$NEXT}}

0.03      2020-03-16 07:51:37 -0600
  - Better synchronization with status file (gh#6)

0.02      2020-03-07 18:40:58 -0700
  - Add PERL_WIN32_VCPKG_DEBUG env var to override default
    for debug.

0.01      2020-03-07 14:21:08 -0700
  - initial version

