@@ -51,6 +51,11 @@ Array reference of library names.  Do not include the C<.lib> extension.  If not
 no libraries will be linked against, but this might be useful to get the compiler flags (C<cflags>)
 and linker flags (C<libs>) needed for C<Vcpkg>.
 
+=item include
+
+Array reference of include names.  Some packages put their header files in a subdirectory, here
+you can specify the name of the subdirectory so that it will be included in C<cflags>.
+
 =item debug
 
 If true, link against the debug version of the libraries.
@@ -68,11 +73,21 @@ sub new
   my @lib     = @{ $args{lib} || [] };
   my $debug   = defined $args{debug} ? $args{debug} : $ENV{PERL_WIN32_VCPKG_DEBUG};
 
-  my $cflags = "-I@{[ $root->child('installed', $triplet, 'include') ]}";
-
   my $libdir = $root->child('installed', $triplet, 'lib');
   $libdir    = $libdir->parent->child('debug','lib') if $debug;
   my $libs   = "-LIBPATH:$libdir";
+
+  my $cflags = "-I@{[ $root->child('installed', $triplet, 'include') ]}";
+
+  my @include =
+    defined $args{include}
+    ? (ref $args{include} eq 'ARRAY' ? @{$args{include}} : ($args{include}))
+    : ();
+
+  foreach my $include (@include)
+  {
+    $cflags .= " -I@{[ $root->child('installed', $triplet, 'include', $include) ]}";
+  }
 
   foreach my $lib (@lib)
   {
